--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,32 @@ spring:
           force-pull: true
           searchPaths: '{application}'
           clone-on-start: true
+eureka:
+  host: 127.0.0.1
+  port: 8761
+  username: discovery
+  password: 3GfhPZQifTpVcu
+  client:
+    service-url:
+      defaultZone: http://${eureka.username}:${eureka.password}@${eureka.host}:${eureka.port}/eureka
+---
+spring:
+  profiles: default
+server:
+  port: 8001
+eureka:
+  host: 127.0.0.1
+---
+spring:
+  profiles: dev
+server:
+  port: 8080
+eureka:
+  host: eureka
+---
+spring:
+  profiles: prd
+server:
+  port: 8080
+eureka:
+  host: eureka
