--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,14 +43,10 @@ eureka:
 ---
 spring:
   profiles: dev
-server:
-  port: 8080
 eureka:
-  host: eureka
+  host: eureka-server
 ---
 spring:
   profiles: prd
-server:
-  port: 8080
 eureka:
-  host: eureka
+  host: eureka-server
